# sfMir2

./: OpenMir2_Rust现代化引擎技术文档_V3.0.md  OpenMir2_Rust现代化引擎技术文档_V4.0.md  OpenMir2_全新架构版本技术文档_V2.0.md  README.md  V4.0_AI开发硬约束_开工前自检.md  V4.0_代码规范文档.md  index.html  script.js  style.css
mir2/: .gitignore  Cargo.toml  rust-toolchain.toml
mir2/mir2-client/: Cargo.toml
mir2/mir2-client/src/: main.rs
mir2/mir2-db-server/: Cargo.toml
mir2/mir2-db-server/src/: main.rs
mir2/mir2-game-center/: Cargo.toml
mir2/mir2-game-center/src/: main.rs
mir2/mir2-log-server/: Cargo.toml
mir2/mir2-log-server/src/: main.rs
mir2/mir2-login-gate/: Cargo.toml
mir2/mir2-login-gate/src/: main.rs
mir2/mir2-login-srv/: Cargo.toml
mir2/mir2-login-srv/src/: main.rs
mir2/mir2-m2/: Cargo.toml
mir2/mir2-m2/src/: main.rs
mir2/mir2-run-gate/: Cargo.toml
mir2/mir2-run-gate/src/: main.rs
mir2/mir2-sel-gate/: Cargo.toml
mir2/mir2-sel-gate/src/: main.rs
mir2/mir2-shared/: Cargo.toml
mir2/mir2-shared/src/: lib.rs
mir2/mir2-shared/src/calc/: damage.rs  drop_rate.rs  exp.rs  mod.rs
mir2/mir2-shared/src/components/: ai.rs  combat.rs  equipment.rs  inventory.rs  mod.rs  monster.rs  movement.rs  npc.rs  player.rs  position.rs  skill.rs
mir2/mir2-shared/src/config/: log.rs  mod.rs  network.rs
mir2/mir2-shared/src/constants/: items.rs  maps.rs  mod.rs  monsters.rs  skills.rs
mir2/mir2-shared/src/proto/: mod.rs
mir2/mir2-shared/src/protocol/: error_code.rs  mod.rs  network_message.rs  opcode.rs
mir2/mir2-shared/src/types/: mod.rs
mir2/mir2-shared/src/util/: encoding.rs  mod.rs  rng.rs
