[workspace]
resolver = "2"
members = [
    "mir2-shared",
    "mir2-login-gate",
    "mir2-sel-gate",
    "mir2-run-gate",
    "mir2-login-srv",
    "mir2-m2",
    "mir2-db-server",
    "mir2-log-server",
    "mir2-game-center",
    "mir2-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Protobuf
prost = "0.14"
prost-types = "0.14"

# 数据库
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "json",
    "macros",
] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }

# 脚本引擎
mlua = { version = "0.10", features = ["lua54", "send", "async"] }

# 界面
egui = "0.29"
eframe = { version = "0.29", features = ["persistence"] }

# 客户端
bevy = "0.14"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_derive = "1"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1"
anyhow = "1"

# 随机数
rand = "0.8"
rand_pcg = "0.3"

# 编码
encoding_rs = "0.8"

# 网络
bytes = "1"
