[package]
name = "mir2-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mir2-client"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
mir2-shared = { path = "../mir2-shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bevy = { workspace = true }
