[package]
name = "mir2-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
encoding_rs = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
